# semester-work-huffman-encoding-004

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt
benchmark/: CMakeLists.txt  demo_benchmark.cpp  huffman-decode-benchmark.cpp  huffman-encode-benchmark.cpp
benchmark/benchmark-visualization/: benchmarkGraphs.json
benchmark/benchmark-visualization/benchmark-results/: huffman-decode-benchmark.csv  huffman-encode-benchmark.csv
cmake/: CompilerWarnings.cmake
dataset/: generate_datasets.py  text_generator_api_functions.py
include/: HuffmanTree.hpp
src/: HuffmanTree.cpp
